[package]
name = "rust-config"
version = "1.0.0"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
