[package]
name = "redact-config"
version = "1.0.0"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Thin abstraction layer for managing configuration in a 12-factor app"
documentation = "https://docs.rs/redact-config"
repository = "https://github.com/pauwels-labs/redact-config.git"
readme = "README.md"
exclude = [
        ".gitignore",
        ".lighthouse",
        "OWNERS",
        "OWNERS_ALIASES"
]

[dependencies]
config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
