[package]
name = "redact-config"
version = "1.0.1"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Thin abstraction layer for managing configuration in a 12-factor app"
documentation = "https://docs.rs/redact-config"
repository = "https://github.com/pauwels-labs/redact-config.git"
readme = "README.md"
exclude = [
        ".gitignore",
        ".lighthouse",
        "OWNERS",
        "OWNERS_ALIASES"
]

[dependencies]
config = "0.13.2"
serde = { version = "1.0.125", features = ["derive"] }
